--- a/TaxiCentral/app/src/main/res/values/strings.xml
+++ b/TaxiCentral/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <string name="title_activity_navigation">Navigation</string>
 
     <!-- Strings related to menu -->
 </resources>
