--- a/TaxiCentral/app/src/main/res/values/strings.xml
+++ b/TaxiCentral/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">TaxiCentral</string>
 
+    <!--<string name="ip">http://10.0.2.2:8080/SpringMVCHibernate/</string>-->
+    <string name="ip">http://192.168.1.34:8080/SpringMVCHibernate/</string>
+
     <!-- Strings related to login -->
     <string name="prompt_taxiId">Taxi ID</string>
     <string name="prompt_password">Password</string>
