--- a/TaxiCentral/app/src/main/res/values/strings.xml
+++ b/TaxiCentral/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <!--<string name="ip">http://10.0.2.2:8080/SpringMVCHibernate/</string>-->
     <string name="ip">http://192.168.1.37:8080/SpringMVCHibernate/</string>
+    <!--<string name="ip">http://192.168.0.101:8080/SpringMVCHibernate/</string>-->
+
 
     <!-- Strings related to login -->
     <string name="prompt_taxiId">Taxi ID</string>
